# ATHENA-Adaptive-Transformer-for-Hierarchical-Efficient-Neural-Adaptation

./: .gitignore  README.md  pyproject.toml  requirements.txt
athena/: __init__.py  adapters.py  autorank.py  memory.py  scheduler.py  utils.py
athena/adapters/: qformer.py  vision.py
configs/: blip2-7b-coco.yaml  deepspeed_config.json  llama3-8b-samsum.yaml  llava-7b-vqa.yaml
docs/: architecture.py  generate_diagram.sh
scripts/: evaluate.py  evaluate_vl.py  train.py  train_vl.py
